init donut chart vis

--- a/progress.styl
+++ b/progress.styl
@@ -81,3 +81,12 @@ header
 
 .card-content
   color color-text-content
+
+// progress donut chart
+#progress
+  svg, .chart-options
+    center()
+
+.arc path
+  stroke #FFF
+  fill color-bg-edx
