--- a/progress.styl
+++ b/progress.styl
@@ -1,5 +1,5 @@
 @import "jeet"
-// @import "rupture"
+@import "rupture"
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 
 // edit()
@@ -40,7 +40,7 @@ header
   boxshadow()
 
 .main-nav
-  center(1180px)
+  center(1200px)
   font-size 14px
   height 40px
   line-height 40px
@@ -64,10 +64,14 @@ header
 // content
 .content
   center(1180px)
+  +below(768px)
+    center(600px)
   margin-top 100px
 
 .card
   col(1/2)
+  +below(768px)
+    stack()
   border-radius 5px
   background-color color-bg-card
   border('')
