visualize progress via arc overlay

--- a/progress.styl
+++ b/progress.styl
@@ -91,6 +91,9 @@ header
   svg, .chart-options
     center()
 
-.arc path
-  stroke #FFF
+.arc-bg
+  stroke color-bg-card
   fill color-bg-edx
+
+.arc-fg
+  fill color-primary
