--- a/progress.styl
+++ b/progress.styl
@@ -20,6 +20,14 @@ border(suffix)
 boxshadow()
   box-shadow 0 1px 2px rgba(0, 0, 0, 0.1)
 
+unselectable()
+  -webkit-touch-callout none
+  -webkit-user-select none
+  -khtml-user-select none
+  -moz-user-select none
+  -ms-user-select none
+  user-select none
+
 // main
 *
   box-sizing border-box
@@ -90,6 +98,8 @@ header
 #progress
   svg, .chart-options
     center()
+  *
+    unselectable()
 
 .arc-bg
   stroke color-bg-card
