use table instead of svg for leaderboard vis

--- a/index.styl
+++ b/index.styl
@@ -149,17 +149,23 @@ svg
 .category-video
   fill color-secondary
 
-.text-student-names, .text-ranks
-  fill color-text-content
+.text-scores
+  color color-bg-card
+
+.text-student-names
+  text-align center
+
+.text-ranks
+  text-align right
 
 .top10_problem
-  fill color-primary
+  background-color color-primary
 
 .top10_video
-  fill color-secondary
+  background-color color-secondary
 
 .top10_active
-  fill color-success
+  background-color color-success
 
 .top10_timespent
-  fill color-warning
+  background-color color-warning
