--- a/index.styl
+++ b/index.styl
@@ -38,11 +38,12 @@ labeltext()
 // main
 *
   box-sizing border-box
+  margin 0
+  padding 0
 
 body
   background-color color-bg-edx
   font-family 'Open Sans', Verdana, Geneva, sans-serif
-  margin 0
   font-size 14px
 
 // fake edX main navbar
