minor style fixes

--- a/index.styl
+++ b/index.styl
@@ -246,14 +246,20 @@ svg
 .text-ranks
   text-align right
 
-.top10_problem
+.lb-oneself
+  font-weight 700
+
+.lb-top10-problem, .lb-top10-video, .lb-top10-active, .lb-top10-timespent
+  padding-left 10px
+
+.lb-top10-problem
   background-color color-primary
 
-.top10_video
+.lb-top10-video
   background-color color-secondary
 
-.top10_active
+.lb-top10-active
   background-color color-success
 
-.top10_timespent
+.lb-top10-timespent
   background-color color-warning
