minor style fixes; add readme

--- a/index.styl
+++ b/index.styl
@@ -86,18 +86,19 @@ header
 
 .nav-course
   center(1200px)
-  height 70px
+  height 60px
   font-weight 700
   line-height 14px
   color color-text-title
-  padding 28px 0 0 28px
+  padding 23px 0 0 23px
   span
     padding 8px 15px 8px 15px
   .tab-active
     color color-bg-card
-    border-radius 3px
-    background-image linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.25))
     text-shadow 0px 1px 0px rgba(0, 0, 0, 0.4)
+    border-radius 3px
+    box-shadow 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 1px rgba(0, 0, 0, 0.3) inset
+    background-image linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.25))
 
 
 // content
