minor style fixes for databits; change data names

--- a/index.styl
+++ b/index.styl
@@ -45,6 +45,7 @@ body
   background-color color-bg-edx
   font-family 'Open Sans', Verdana, Geneva, sans-serif
   font-size 14px
+  text-align left
 
 // fake edX main navbar
 header
@@ -105,6 +106,7 @@ header
 
 .content
   center(1180px)
+  padding-bottom 60px
   +below(1000px)
     center(600px)
 
