--- a/index.css
+++ b/index.css
@@ -198,6 +198,7 @@ header {
   margin-left: auto;
   padding-left: 0;
   padding-right: 0;
+  height: auto;
   border-radius: 3px;
   background-color: #fff;
   border: 1px solid #aaa;
